# ethereum-receipt-proof-maker

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: check_tx_hash.rs  cli_arg_struct.rs  connect_to_node.rs  constants.rs  dot_env_utils.rs  errors.rs  get_block.rs  get_branch_from_trie.rs  get_database.rs  get_endpoint.rs  get_hex_proof_from_branch.rs  get_keccak_hash.rs  get_log.rs  get_receipt.rs  get_receipts.rs  get_receipts_trie.rs  get_rpc_call_jsons.rs  get_tx_index.rs  initialize_state_from_cli_args.rs  main.rs  make_merkle_receipt_proof.rs  make_rpc_call.rs  nibble_utils.rs  parse_cli_args.rs  path_codec.rs  rlp_codec.rs  rlp_encode.rs  start_logger.rs  state.rs  test_utils.rs  trie.rs  trie_nodes.rs  types.rs  usage_info.rs  utils.rs  validate_cli_args.rs  validate_tx_hash.rs
test_utils/: sample_block_json  sample_receipt_json  sample_receipt_json_2  sample_receipt_json_3
test_utils/sample_receipt_jsons_2/: get_receipts.sh
