[package]
name = "rusty-receipt-proof-maker"
version = "0.1.0"
authors = ["Greg Kapka <greg@oraclize.it>"]
edition = "2018"

[dependencies]
hex = "0.3.2"
rlp = "0.4.2"
serde = "1.0.97"
docopt = "1.1.0"
dotenv = "0.14.1"
reqwest = "0.9.19"
tiny-keccak = "1.5.0"
serde_json = "1.0.40"
serde_derive = "1.0.94"
ethereum-types = "0.6.0"
serial_test_derive = "0.1"

[dev-dependencies]
serial_test = "0.1"
